infra/k8s/business-profile-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-profile-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: business-profile
  template:
    metadata:
      labels:
        app: business-profile
    spec:
      containers:
        - name: business-profile
          image: diaa14/business-profile
---
apiVersion: v1
kind: Service
metadata:
  name: business-profile-serv
spec:
  selector:
    app: business-profile
  ports:
    - name: business-profile
      protocol: TCP
      port: 3001
      targetPort: 3001
