infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://authorization-serv.default.svc.cluster.local:4002/api/"
spec:
  rules:
    - host: 192.168.1.6.nip.io
      http:
        paths:
          - path: /api/profile/?(.*)
            pathType: Prefix
            backend:
              service:
                name: profile-serv
                port:
                  number: 4000
          - path: /api/business-profile/?(.*)
            pathType: Prefix
            backend:
              service:
                name: business-profile-serv
                port:
                  number: 4001
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-serv
                port:
                  number: 4003
